source/tests/errors/expected_identifier_after_dot.apex
t = (a = 1)
x = t.42